hpa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cbz-app
  labels:
    app: cbz-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cbz-app
  template:
    metadata:
      labels:
        app: cbz-app
    spec:
      containers:
      - name: cbz-app
        image: nginx
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
