pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  labels:
    app: my-app
spec:
  containers:
    - name: database
      image: mysql:latest
      ports:
        - containerPort: 3306
