pods.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: my-pod
  labels:
    app: my-app
spec:
  containers:
    - name: my-c
      image: httpd
      ports:
        - containerPort: 80
  selector:
    app: my-app
