st.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-sts
  labels:
    app: sts-app
spec:
  replicas: 3
  template:
    metadata: 
      labels:
        app: sts-app
    spec:
      containers:
        - name: my-c
          image: httpd
          ports:
            - containerPort: 80
  selector:
    matchLabels:
      app: sts-app
