service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-svc
  labels: 
    app: my-app
spec:
  selector:
    app: my-app
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
